--- a/dashboard/enviromon.html
+++ b/dashboard/enviromon.html
@@ -71,7 +71,7 @@
         var columns = [];
         var geolocation = [];
 
-        const apiBaseUrl = 'https://enviromon-signalr.azurewebsites.net'
+        const apiBaseUrl = '<your azure function endpoint>' //ex : https://enviromon-signalr.azurewebsites.net
 
         const app = new Vue({
             // el: '#app',
